--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@enrynewton/csv-loader",
+  "name": "csv-loader",
   "version": "1.0.0",
   "main": "build/index.js",
   "types": "build/index.d.ts",
